# Milestone-2

./: CMakeLists.txt  README.md  exceptions.h  main.cpp  old_main.cpp  readme.txt  server.h  test.h
algorithms/: cacheManager.h  fileCacheManager.h  search_algorithms.cpp  search_algorithms.h  searchable.h  solver.h  state.h  state_for_test.h
cache/: cacheManager.h  fileCacheManager.h  fileCacheManager.tpp  fileUtils.cpp  fileUtils.h  stringCacheManager.cpp  stringCacheManager.h  stringStreamer.h
server/: clientHandler.cpp  clientHandler.h  fdbuf.cpp  fdbuf.h  my_client_handler.cpp  my_client_handler.h  parallelServer.cpp  parallelServer.h  serialServer.cpp  serialServer.h  server.h  testClientHandler.cpp  testClientHandler.h
server/sockets/: socket_exceptions.h  sockets.cpp  sockets.h
server/threads/: ThreadPool.cpp  ThreadPool.h  threads.cpp  threads.h
solve_problem/: AStar.h  BestFirstSearch.h  a_star.h  best_first_search.h  bfs.h  dfs.h  others.h  search_algorithms.cpp  search_algorithms.h  search_solver.h  searchable.h  searchable_table.cpp  searchable_table.h  solver.h  state.h
